# kilovolt

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
docs/: api_usage.md  gemini_usage.md  kilovolt.postman_collection.json  openai_usage.md
src/: budget.rs  config.rs  dashboard.rs  main.rs  proxy.rs
web/: .gitignore  package-lock.json  package.json
web/app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
web/app/api/login/: route.ts
web/app/api/telemetry-data/: route.ts
web/app/api/waitlist/: route.ts
web/app/blog/: page.tsx  utils.ts
web/app/blog/[slug]/: page.tsx
web/app/login/: page.tsx
web/app/telemetry-dashboard/: TelemetryDashboard.tsx  page.tsx
web/app/v1/update-check/: route.ts
web/content/blog/: complete-architecture-cost-efficient-llm-pipelines.md  deploy-llm-proxy-5-dollar-vps.md  fix-vllm-out-of-memory-api-proxy.md  llm-api-circuit-breaker-reverse-proxy.md  llm-token-cost-tracking-proxy.md  open-source-rust-llm-proxy.md  openai-streaming-ghost-billing-fix.md  prevent-llm-oom-crash-docker.md  self-hosted-llm-gateway-low-memory.md  stop-openai-runaway-token-billing.md  zero-copy-streaming-llm-proxy.md
