[package]
name = "kilovolt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http = "1.1"
http-body-util = "0.1"
dotenvy = "0.15"
tiktoken-rs = "0.12"
chrono = { version = "0.4", features = ["serde"] }
